feat: migrate to material-ui

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,10 @@
-.App {
+body {
   text-align: center;
   background-color: #282c34;
 }
 
 .TodoTable {
-  min-height: 100vh;
+  min-height: 50vh;
   padding: 100px;
   display: flex;
   flex-direction: column;
@@ -12,17 +12,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
