refator: rename "importnace" -> "impact"

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,7 +5,7 @@ body {
 
 .TodoTable {
   min-height: 50vh;
-  padding: 100px;
+  padding: 0 100px 100px 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
