--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,3 +1,5 @@
+$margin: 10%;
+
 body {
   text-align: center;
   background-color: #282c34;
@@ -12,6 +14,7 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: 0 $margin 0 $margin;
 }
 
 .chanelog {
